--- a/src/styles/style.config.json
+++ b/src/styles/style.config.json
@@ -2,10 +2,9 @@
   "colors": {
     "primary": "#3B3355",
     "secondary": "#219EBC",
-    "orange": "#FB8500",
-
-    "black": "#0E171B",
-    "darkOrange": "#CF5C36",
+    "purple": "#5D5D81",
+    "lightergreen": "#B8B8AA",
+    "green": "#AAAD91",
     "mauve": "#DABFFF"
   },
   "breakPoints": {
